compiler/testData/cli/jvm/_diagnosticTests/fileClassAndMultifileClassClash.out
compiler/testData/cli/jvm/_diagnosticTests/fileClassAndMultifileClassClash1.kt:1:1: error: duplicate JVM class name 'test/Util' generated from: Util, Util
@file:JvmName("Util")
^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
